//
//  pia14iosjan12UITests.swift
//  pia14iosjan12UITests
//
//  Created by BillU on 2026-01-12.
//

import XCTest

final class pia14iosjan12UITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        app.activate()
        let txt1 = app.textFields["Number 1"].firstMatch
        let txt2 = app.textFields["Number 2"].firstMatch

        txt1.tap()
        txt1.typeText("1")
        
        txt2.tap()
        txt2.typeText("banan")
        
        app.buttons["Add"].firstMatch.tap()
                
        let errortext = app.staticTexts["ERROR"].firstMatch
        
        XCTAssert(errortext.exists)
        
        let mainScreenScreenshot = XCUIScreen.main.screenshot()
        let fullScreenshotAttachment = XCTAttachment(screenshot: mainScreenScreenshot)
        fullScreenshotAttachment.lifetime = .keepAlways

        add(fullScreenshotAttachment)
        
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    @MainActor
    func testLaunchPerformance() throws {
        // This measures how long it takes to launch your application.
        measure(metrics: [XCTApplicationLaunchMetric()]) {
            XCUIApplication().launch()
        }
    }
}
